# Adventure-Game

backend/: .gitignore  main.py  pyproject.toml
backend/core/: config.py  models.py  story_generator.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: job.py  story.py
frontend/src/: App.jsx  util.js
frontend/src/components/: StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx
